peless (1.259-1) unstable; urgency=low

  * new upstream version
  * add Homepage:

 -- Paul Elliott <pelliott@blackpatchpanel.com>  Mon, 14 May 2012 10:08:23 -0500

peless (1.252-2) unstable; urgency=low

  * convert to "3.0 (quilt)" or "3.0 (native)"
  * upgrade rules to use dh8 simplifications
  - add README ChangeLog to debian/docs; before done in old rules
  * upgrade to standards version 3.9.3
  * add --as-needed to LDFLAGS
  * use dh-autoreconf to cause autoreconf before autoconf
  - therefore updates to the package autoconf-archive
  - .ie boost will be assimilated
  - build-depends on autoconf-archive

 -- Paul Elliott <pelliott@blackpatchpanel.com>  Sat, 12 May 2012 14:46:06 -0500

peless (1.252-0ubuntu1) natty; urgency=low

  * New upstream release

 -- Paul Elliott <pelliott@blackpatchpanel.com>  Tue, 08 May 2012 11:28:07 -0500

peless (1.243-0ubuntu1) natty; urgency=low

  * New upstream release

 -- Paul Elliott <pelliott@blackpatchpanel.com>  Fri, 04 May 2012 16:10:54 -0500

peless (1.223-1) unstable; urgency=low

  * New upstream release

 -- Paul Elliott <pelliott@BlackPatchPanel.com>  Thu, 04 Nov 2010 22:06:08 -0500

peless (1.221-1) unstable; urgency=low

  * New upstream release

 -- Paul Elliott <pelliott@BlackPatchPanel.com>  Tue, 02 Mar 2010 21:43:25 -0600

peless (1.211-1) unstable; urgency=low

  * New upstream release

 -- Paul Elliott <pelliott@BlackPatchPanel.com>  Thu, 21 Jan 2010 00:18:42 -0600

peless (1.199-1) unstable; urgency=low

  * add intltool to Build-depends:  because of complex problem
  * New upstream release

 -- Paul Elliott <pelliott@BlackPatchPanel.com>  Sat, 15 Aug 2009 00:29:42 -0500

peless (1.193-1) unstable; urgency=low

  * New upstream release
  * add g++ to Build-Depends: of control. resolves libstdc++ ambigutities in opensuse-buildservice

 -- Paul Elliott <pelliott@hrnowl.lug.local>  Tue, 27 Jan 2009 14:25:39 -0600

peless (1.156-2) unstable; urgency=low
