@@ -2,6 +2,7 @@ peless (1.259-1) unstable; urgency=low
 
   * new upstream version
   * add Homepage:
+  * remove empty directories
 
  -- Paul Elliott <pelliott@blackpatchpanel.com>  Mon, 14 May 2012 10:08:23 -0500
 
